--- a/packages/ui/src/index.html
+++ b/packages/ui/src/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8" />
     <title>Ui</title>
     <base href="/" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
-    <div id="root"></div>
+  <body id="root">
   </body>
 </html>
